--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -13,10 +13,9 @@ VGA_MODE := "640_480_60"
 # Clock Frequency in MHZ
 CLK_FREQ := 100
 
-# these are files that we can't build with yosys/nextpnr and only
-# work with icecube2. nextprn just can't always (or ever) do
-# place and route that meets timing, but icecube2 can.
-TOP_IGNORE := tlight/tlight_top.sv adc/adc_xy_vga_fade_stripe_top.sv
+# These are files that we can't build with yosys/nextpnr and need icecube2.
+# nextprn just can't meet timing.
+TOP_IGNORE := adc/adc_xy_vga_fade_top.sv adc/adc_xy_vga_fade_stripe_top.sv
 
 # Directories
 TEST_DIR := test
